# modern-cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/util/: ptr.hpp
